# disk

./: .gitignore  LICENSE.txt  README.md  compute_validation_auc.py  detect.py  download_dataset  match.py  pyproject.toml  requirements.txt  setup.py  train.py  view_h5.py
colmap/: colmap2dataset.py  merge_datasets.py
disk/common/: image.py  structs.py  vis.py
disk/data/: datasets.py  disk_dataset.py  limited_dataset.py
disk/geom/: distance_matrix.py  epi.py  pose.py
disk/loss/: discrete_metric.py  pose_metric.py  ransac.py  rewards.py
disk/model/: consistent_matcher.py  cycle_matcher.py  detector.py  disk.py  nms.py
prepare_data/: create_file_lists.py  create_metadata.py  explore.ipynb  read_write_model.py  unpack_and_undistort.py  unpack_image_files.py
results/hpatches/: disk-imsize-1024-nms-3-nump-2048.npy  disk-imsize-1024-nms-3-nump-8000.npy
src/disk/: __init__.py  config.py  trainer.py  unet.py
src/disk/common/: errors.py  image.py  logger.py  structs.py  vis.py  vis_kornia.py
src/disk/data/: datasets.py  disk_dataset.py  h5_dataset.py  limited_dataset.py  tuple_dataset.py
src/disk/geom/: distance_matrix.py  epi.py  pose.py
src/disk/loss/: discrete_metric.py  pose_metric.py  ransac.py  reinforce.py  rewards.py
src/disk/model/: consistent_matcher.py  cycle_matcher.py  detector.py  disk.py  nms.py  unet.py
src/disk/new_data/: data.py
