[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disk"
version = "2.0.0"
authors = [
  { name="Michal Jan Tyszkiewicz", email="michal.tyszkiewicz@epfl.ch" },
]
description = "DISK v2"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lightning",
    "torch >= 2.0.0",
    "einops",
    "matplotlib",
    "numpy",
    "pytest",
    "pydegensac",
    "opencv-python-headless",
    "kornia_moons",
]
